--- a/src/components/register/register.module.css
+++ b/src/components/register/register.module.css
@@ -1,5 +1,5 @@
 .main{
-    margin: 100px 0 0 0;
+    margin: 20vh 0 0 0;
 }
 .title{
     font-size: 25px;
@@ -11,6 +11,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.passwords_error{
+    display: block;
+    color: white;
+    height: 20px;
+    width: 300px;
+    padding: 2px 0 2px 15px;
+    background-color: rgba(227,30,37, 0.7);
+    border: 0.5px solid rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    margin: 5px 0 15px 0;
+    font-size: 15px;
+    text-align: center;
 }
 .registering_button{
     height: 40px;
